llama-3/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 30s
  labels:
    inferenceservice-name: llama-guard-3-1b
  name: llama-guard-3-1b
  namespace: summit-connect-2025
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: llama-guard-3-1b-predictor
    weight: 100
  wildcardPolicy: None
